fitness-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker
  namespace: asad-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
    spec:
      containers:
      - name: fitness-tracker-app
        image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
        ports:
        - containerPort: 5000
