sample2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-fail
spec:
  containers:
  - name: nginx
    image: nginx
``
